--- a/css/Filter.css
+++ b/css/Filter.css
@@ -1,12 +1,6 @@
 /* Filter */
-main
-{
-    
-}
-
 .filterBar {
     width: 80%;
-    background-color: lightblue;
     display: block; 
 }
 
@@ -14,6 +8,11 @@ main
     width: 20%;
     display: inline-block;
     vertical-align: top;
+    background-color: lightblue;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 
 .filter button{
