--- a/css/Filter.css
+++ b/css/Filter.css
@@ -64,9 +64,76 @@
     margin-right: auto;
 }
 
+/* Checkbox filters css 
+Thanks: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_custom_checkbox */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 18px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.container input /* Hide the browser's default checkbox */
+{
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.checkmark { /* Create a custom checkbox */
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+    margin-left: 8px;
+}
+
+.container:hover input ~ .checkmark { /* On mouse-over, add a grey background color */
+  background-color: #ccc;
+}
+
+.container input:checked ~ .checkmark { /* When the checkbox is checked, add a blue background */
+  background-color: #004e74;
+}
+
+.checkmark:after { /* Create the checkmark/indicator (hidden when not checked) */
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.container input:checked ~ .checkmark:after { /* Show the checkmark when checked */
+  display: block;
+}
+
+.container .checkmark:after { /* Show the checkmark when checked */
+  left: 5.5px;
+  top: 2.5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+/* Sorty By Filter css */
 select#options
 {
     color: white;
+    font-size: 18px;
+    cursor: pointer;
 }
 
 select#options:focus-within
@@ -77,6 +144,7 @@ select#options:focus-within
 
 select#options option
 {
+    cursor: pointer;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
