--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,50 +1,16 @@
-.carousel div {
+div.carousel{
+    border-radius: 5px;
+    height: 175px;
+}
 
-
-  
+div.carousel button {
     display: inline-block;
     vertical-align: middle;
-    border-radius: 5px;
-}
-
-.right {
+    
     background-color: #0098ba;
     border-color: blue;
-    display: inline-block;
     width: 12%;
-   
-    height: 100%;
     border-width: 0;
-
-
-
-
- 
-    
-   
-  
- 
-
-
-
-
-}
-
-.left {
-
-    height: 100%;
-    background-color: #0098ba;
-
-    border-color: blue;
-    display: inline-block;
-    width: 12%;
-
-    border-width: 0;
-    
-
-
-
-
 }
 
 .imageHolder {
@@ -55,11 +21,8 @@
     right: 15%;
     height: 152px;
     white-space: nowrap;
-
-
-
-
-
+    display: inline-block;
+    vertical-align: middle;
 }
 
 #test {
