--- a/css/Filter.css
+++ b/css/Filter.css
@@ -42,6 +42,17 @@
     padding: 5%;
 }
 
+.filter button img
+{
+    height: 20px;
+    width 20px;
+    padding-right: 5px;
+    
+    position: relative;
+    left: -10px;
+    vertical-align: middle;
+}
+
 .filter button:hover
 {
     cursor: pointer;
