--- a/style/StoryPreview.css
+++ b/style/StoryPreview.css
@@ -2,38 +2,31 @@
 	position: relative;
 	display: inline-block;
 	float: left;
-
 	width: 33%;
-
 	height: 200px;
-
 	padding: 15px;
 }
 .story-preview .meta-data-container, .story-preview .cover-image-container{
 	position: absolute;
 	height: calc(100% - 30px);
 	width: calc(100% - 30px);
-	background-color: #000000;
+	background-color: #004E74;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center center;
 }
 .story-preview .meta-data-container{
 	display: none;
-	background-color: rgba(0, 0, 0, .85);
+	background-color: #004E74F0;
 	padding: 10px;
 	color: #FFFFFF;
 	overflow: auto;
 }
+.story-preview:hover .cover-image-container{
+	background-color: #FFFFFF;
+}
 .story-preview:hover .meta-data-container{
 	display: block;
-}
-.story-preview .cover-image{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-    max-height: 100%;
-    max-width: 100%;
-    width: 100%;
-    object-fit: contain;
 }
 .story-preview .info-button{
 	display: none;
