--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,6 +1,7 @@
 div.carousel{
     border-radius: 5px;
-    height: 175px;
+    height: 100%;
+    padding: 20px;
 }
 
 div.carousel button {
@@ -19,10 +20,15 @@ div.carousel button {
     overflow: hidden;
     left: 15%;
     right: 15%;
-    height: 152px;
+  
     white-space: nowrap;
     display: inline-block;
     vertical-align: middle;
+}
+
+.imageHolder img
+{
+    display: inline-block;
 }
 
 #test {
