--- a/style/Main.css
+++ b/style/Main.css
@@ -14,8 +14,8 @@ header{
 	height: 75px;
 	background-color: #FFFFFF;
 	top: 0px;
-	padding: 15px;
 	border-bottom: 3px solid #004E74;
+	z-index: 100;
 }
 main{
 	height: calc(100% - 100px);
@@ -27,7 +27,6 @@ footer{
 	height: 25px;
 	background-color: #0098ba;
 	bottom: 0px;
-	padding: 5px 15px;
 }
 
 header #language-selector{
