--- a/css/carousel.css
+++ b/css/carousel.css
@@ -29,11 +29,19 @@ div.carousel button {
 .imageHolder img
 {
     display: inline-block;
+    /*padding: 10px;*/
 }
 
-#test {
+carousel #single {
     display: block;
     
+}
+
+carousel #multi
+{
+    display: block;
+    padding: 10px;
+    background-color: #004e74;
 }
 
 .carousel .carouselNav {
@@ -56,4 +64,52 @@ div.carousel button {
     
     width: 45%;
     height: 45%;
+}
+
+.pageIndicator
+{
+    background-color: #004e74;
+    z-index: 1;
+    width: 100%;
+    height: 30px;
+    
+    opacity: .7;
+    
+    position: relative;
+    top: -34px; 
+}
+
+.dots
+{
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.dot
+{
+    display: inline-block;
+    
+    border-style: solid;
+    border-radius: 50%;
+    border-color: #0098ba;
+    background-color: #0098ba;
+    
+    height: 20px;
+    width: 20px;
+    
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    
+}
+
+.dot#current
+{
+    border-color: white;
+    background-color: white;
+    
+    transition: background-color 2s, border-color 2s;
 }
