--- a/css/carousel.css
+++ b/css/carousel.css
@@ -66,7 +66,7 @@ carousel #multi
     height: 45%;
 }
 
-.pageIndicator
+.pageIndicator.overlay
 {
     background-color: #004e74;
     z-index: 1;
@@ -77,6 +77,13 @@ carousel #multi
     
     position: relative;
     top: -34px; 
+}
+
+.pageIndicator
+{
+    background-color: #004e74;
+    width: 100%;
+    height: 30px;
 }
 
 .dots
