--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,13 +1,14 @@
 div.carousel{
     border-radius: 5px;
     height: 100%;
-    padding: 20px;
+
+    width: 100%;
 }
 
 div.carousel button {
     display: inline-block;
     vertical-align: middle;
-    
+    width: 12%;
     background-color: #0098ba;
     border-color: blue;
    
@@ -20,7 +21,7 @@ div.carousel button {
     overflow: hidden;
     left: 15%;
     right: 15%;
-    height: 100%;
+    height: 40%;
     white-space: nowrap;
     display: inline-block;
     vertical-align: middle;
@@ -30,6 +31,7 @@ div.carousel button {
 {
     display: inline-block;
 }
+
 
 
 
@@ -56,12 +58,14 @@ div.carousel button {
 }
 .imageHolder .story-preview{
     width: 100%;
-    
+    height: 100%;
     background-color: #0098ba;
 }
 .imageHolder .story-preview .cover-image-container{
-    width: 100%;
+    width: calc(100%-30px);
     background-color: #0098ba;
+    background-size: 100% 100%;
+    
 }
 .hovereable{
     display: inline-block;
@@ -70,5 +74,6 @@ div.carousel button {
 }
 .imageHolder .meta-data-container{
      white-space: normal;
-  
+    width: 100%;
+
 }
