--- a/style/Carousel.css
+++ b/style/Carousel.css
@@ -10,14 +10,24 @@
     border: none;    
     background: none;
 }
+
+.carousel .left{
+    margin-left: 17.5%;
+}
+
+.carousel .right{
+    margin-right: 17.5%;
+}
+
 .carousel .image-holder{
     position: relative;
     float: left;
     height: 100%;
-    width: 80%;
+    width: 45%;
     overflow: hidden;
     white-space: nowrap;
     display: inline-block;
+    
 }
 .carousel .carousel-panel{
     height: 100%;
@@ -27,9 +37,10 @@
 {
     margin: 15px;
     height: calc(100% - 30px);
-    width: calc(80% - 30px);
+    width: calc(45% - 30px);
     border: 15px solid #004e74;
     border-bottom-width: 0px;
+    border-top-width: 0px;
     padding-bottom: 40px;
     border-radius: 25px;
     background-color: #004e74;
@@ -39,15 +50,6 @@
 {
     display: inline-block;
     /*padding: 10px;*/
-}
-
-
-
-carousel #multi
-{
-    display: block;
-    padding: 10px;
-    background-color: #004e74;
 }
 
 .carousel .carousel-nav-img {
@@ -100,6 +102,35 @@ carousel #multi
     margin-right: auto;
 }
 
+.pageTitle.overlay{
+      background-color: #004e74;
+    z-index: 1;
+    width: calc(100% - 50px);
+    opacity: .7;
+    transition: opacity .5s;
+    color: White;
+    top: 55px;
+    left: 25px;
+    
+}
+.pageTitle{
+     background-color: #004e74;
+    padding-top: 5px;
+
+    width: 100%;
+    height: 25px;
+    font-size: 25px;
+    color: White;
+    position: relative;
+    
+    text-align: center;
+    
+    font-family: Arial, Helvetica, sans-serif;
+}
+   
+
+
+
 .dot
 {
     display: inline-block;
@@ -114,7 +145,7 @@ carousel #multi
     
     margin-left: 5px;
     margin-right: 5px;
-    margin-top: 5px;
+    margin-top: 7px;
     margin-bottom: 5px;
     
 }
