--- a/style/Filter.css
+++ b/style/Filter.css
@@ -1,7 +1,9 @@
 /* Filter */
-.filterBar{
+#filter-bar{
     width: 100%;
+    height: 90px;
     background-color: #a0eaf7;
+    overflow: visible;
 }
 
 .filters {
@@ -16,6 +18,7 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
+    z-index: 2;
 }
 
 .filter{
@@ -28,7 +31,7 @@
 
 .filter button{
     border: solid;
-    border-radius: 18px;
+    border-radius: 25px;
     border-color: #004e74;
     
     font-size: 110%;
@@ -40,6 +43,8 @@
     height: 150%;
     
     padding: 5%;
+    position: relative;
+    z-index: 1;
 }
 
 .filter button img
@@ -64,7 +69,7 @@
     
     display: none;
     
-    width: 77%;
+    width: 100%;
     height: 200%;
     
     background-color: #195f81;
@@ -74,6 +79,8 @@
     border: none;
     
     padding: 5px;
+    padding-top: 30px;
+    top: -20px;
     
     position: relative;
     margin-left: auto;
