--- a/style/Carousel.css
+++ b/style/Carousel.css
@@ -83,12 +83,14 @@
 /* Page Indicator */
 .pageTitle.overlay{
       background-color: #004e74;
+    padding-top: 0px;
     z-index: 1;
     width: 100%;
+    height: 30px;
     opacity: .7;
     transition: opacity .5s;
     color: White;
-    top: 40px;
+    top: 45px;
     
 }
 .pageTitle{
