--- a/style/viewer.css
+++ b/style/viewer.css
@@ -4,6 +4,7 @@
     background-color: #004e74;
     width: 100%;
     height: 700px;
+    padding: 20px;
 }
 
 #viewerBar
@@ -13,30 +14,120 @@
     height: 100px;
 }
 
+#viewerBar #index
+{
+    display: inline;
+    position: relative;
+    float: left;
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+}
+
+#viewerBar #index #holder
+{
+    display: inline-block;
+    background-color: white;
+    
+    height: 100%;
+    
+    border: 1px;
+    border-radius: 30px;
+}
+
+#viewerBar span
+{
+    color: #004e74;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    padding: 25px;
+}
+
+#viewerBar span#current
+{
+    color: #0098ba;
+}
+
+#viewerBar span#slash
+{
+    padding:0px;
+    display: inline-block;
+    position: relative;
+    z-index: 3;
+    height: 50px;
+    width: 5px;
+    
+    top: 5px;
+    
+    border: 1px;
+    border-radius: 30px;
+    border-color: #004e74;
+    background-color: #004e74;
+    
+    transform: rotate(25deg);
+    
+}
+
+
+#viewerBar #optionBtns
+{
+    width: calc(93px * 3);
+    
+    display: inline-block;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-right: 50px;
+    float: right;
+    
+    position: relative;
+    top: -102.5px;
+}
+
+#viewerBar #optionBtns button
+{
+    height: 90px;
+    width: 90px;
+    padding: 5px;
+    
+    border: 1px;
+    border-radius: 50%;
+    border-color: #004e74;
+    background-color: #004e74;
+}
+
+#viewerBar #optionBtns button img
+{
+    height: calc(80% - 5px);
+    width: calc(80% - 5px);
+    padding: 5px;
+}
+
 .viewerNav
 {
     display: inline-block;
     float: left;
     
-    margin-top: calc((700px / 2) - 50px);
+    margin-top: calc((700px / 2) - 100px);
 }
 
 .viewerNav#back
 {
-    margin-left: calc(20% - 60px);
+    margin-left: calc(20% - 110px);
     margin-right: 10px;
 }
 
 .viewerNav#forward
 {
-     margin-right: calc(20% - 60px);
+     margin-right: calc(20% - 110px);
     margin-left: 10px;
 }
 
 .viewerNav button
 {
-    height: 50px; 
-    width: 50px;
+    height: 100px; 
+    width: 100px;
     vertical-align: middle;
 }
 
@@ -47,13 +138,105 @@
     float: left;
     
     width: 60%;
-    height: 92%;
-    
-    margin-top: 2%;
-    margin-bottom: 2%;
+    height: 90%;
     
     position: relative;
     margin-left: auto;
     margin-right: auto;
     /* not extact color */ background-color: #002e45;
+}
+
+.content #currentOverlay
+{
+    width: 100%;
+    height: 50px;
+    
+    /* not extact color */ background-color: #002e45;
+    
+    opacity: .7;
+    position: relative;
+    z-index: 1;
+    
+    text-align: center;
+}
+
+#currentOverlay img
+{
+    height: 30px;
+    width: 30px;
+    margin: 10px;
+    margin-right: 1px;
+    display: inline-block;
+}
+
+#currentOverlay span
+{
+    display: inline-block;
+    
+    margin: 5px;
+    margin-left: 1px;
+    
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    
+    position: relative;
+    top: -15px;
+}
+
+.content video
+{
+    position: relative;
+    top: -50px;
+    
+    margin: 2.5%;
+    margin-left:15%;
+    margin-right: 15%;
+    
+    height: 70%;
+    width: 70%;
+}
+
+.content #story
+{
+    position: relative;
+    top: -50px;
+    height: 25%;
+    background-color: #0098ba;
+    padding: 15px;
+    padding-left: 30px;
+    padding-right: 30px;
+    
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    color: white;
+}
+
+.content #storyToggle
+{
+    height: 50px;
+    width: 50px;
+    
+    margin: 5px;
+    
+    border: 1px;
+    border-radius: 50%;
+    border-color: #004e74;
+    background-color: #004e74;
+    
+    opacity: .7;
+    
+    position: relative;
+    z-index: 3;
+    
+    top: -110px;
+    float: right;
+}
+
+.content #storyToggle img
+{
+    height: 40px;
+    width: 40px;
+    opacity: 1.3;
+    padding: 5px;
 }
