--- a/style/viewer.css
+++ b/style/viewer.css
@@ -6,7 +6,9 @@
     height: 700px;
     padding: 20px;
 }
-
+#Description{
+    font-size: 20px;
+}
 #viewerBar
 {
     background-color: #0098ba;
@@ -70,7 +72,20 @@
     
 }
 
-
+#more-stories{
+    height:  30%;
+    
+    
+    
+}
+#more-author{
+    height: 30%;
+}
+.carousel{
+    width: 100%;
+    
+    
+}
 #viewerBar #optionBtns
 {
     width: calc(93px * 3);
@@ -333,6 +348,7 @@
 #tags{
     padding-top: 10px;
     color: #004e74;
+    padding-bottom: 10px;
     
 }
 #genres{
