--- a/style/viewer.css
+++ b/style/viewer.css
@@ -3,7 +3,7 @@
 {
     background-color: #004e74;
     width: 100%;
-    height: 700px;
+    height: calc(100% - 140px);
     padding: 20px;
 }
 
@@ -92,22 +92,22 @@
 }
 #viewerBar #optionBtns
 {
-    width: calc(93px * 3);
+    width: calc(63px * 3);
     
     display: inline-block;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     margin-right: 50px;
     float: right;
     
     position: relative;
-    top: -102.5px;
+    top: -100px;
 }
 
 #viewerBar #optionBtns button
 {
-    height: 90px;
-    width: 90px;
+    height: 60px;
+    width: 60px;
     padding: 5px;
     
     border: 1px;
@@ -129,7 +129,8 @@
     display: inline-block;
     float: left;
     
-    margin-top: calc((700px / 2) - 100px);
+    position: relative;
+    top: calc(50% - 50px)
 }
 
 .viewerNav#back
@@ -236,7 +237,7 @@
     float: left;
     
     width: 60%;
-    height: 90%;
+    height: 100%;
     
     position: relative;
     margin-left: auto;
@@ -283,24 +284,44 @@
     top: -15px;
 }
 
-.content video
+.content #visuals
 {
     position: relative;
     top: -50px;
     
     margin: 2.5%;
-    margin-left:15%;
-    margin-right: 15%;
+    margin-left: auto;
+    margin-right: auto;
     
     height: 70%;
     width: 70%;
+}
+
+#visuals video
+{
+    height: 100%;
+    width: auto;
+    
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#visuals img
+{
+    height: 100%;
+    width: auto; 
+    
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .content #story
 {
     position: relative;
     top: -50px;
-    height: 22.5%;
+    height: 23%;
     background-color: #0098ba;
     padding: 15px;
     padding-left: 30px;
