--- a/style/viewer.css
+++ b/style/viewer.css
@@ -302,6 +302,8 @@
     height: 100%;
     width: auto;
     
+    max-width: 100%;
+    
     position: relative;
     margin-left: auto;
     margin-right: auto;
@@ -311,6 +313,8 @@
 {
     height: 100%;
     width: auto; 
+    
+    max-width: 100%;
     
     position: relative;
     margin-left: auto;
