--- a/style/viewer.css
+++ b/style/viewer.css
@@ -560,7 +560,10 @@ input[type=email] {
     font-size: 35px;
     font-weight: bold;
 }
-
+#likeClick:hover{
+    color:white;
+    background-color:#0098ba;
+}
 .close:hover,
 .close:focus {
     color: red;
@@ -595,9 +598,13 @@ input[type=email] {
     border-right: 200px;
     border-color: white;
     margin-right: 50px;
-    
+    font-size: 30px;
+    font-style: bold;
   
     
+}
+#definitionContainer h1{
+    color: #004e74;
 }
 #mediaContainer {
     display: block;
@@ -617,6 +624,9 @@ input[type=email] {
     
     
 }
+.mediaImg{
+    height:calc(50%-50px);
+}
 #mediaimage{
       height: 100%;
     width: 90%;
@@ -627,7 +637,7 @@ input[type=email] {
     height: 100%;
     width: 90%;
     padding-bottom: 10px;
-    margin-top: 10%;
+  
 }
 #mediaContainer img{
  height: 100%;
