--- a/style/viewer.css
+++ b/style/viewer.css
@@ -356,6 +356,8 @@
 /* Glossary Terms */
 .glossary
 {
+    position: relative;
+    
     padding-left: 5px;
     padding-right: 5px;
     
@@ -594,38 +596,43 @@ input[type=email] {
     margin-top: 10px;
 }
 
+.container
+{
+    width: 100%;
+    height: 590px;
+}
+
 #definitionContainer {
     display: block;
     margin: 0 auto;
     width: 60%;
-    height:500px;
+    height: 90%;
     color: black;
+    
+    margin: 2.5%;
+    
+    padding: 20px;
    
    
     border-style: solid;
     border-radius: 20px;
-    float: right;
-    text-align: left;
-    border-style: solid;
-    background-color: #a0eaf7;
-    padding-top: 10px;
-    padding-left: 20px;
-   margin-top: 40px; 
     border-right: 200px;
     border-color: white;
-    margin-right: 50px;
     
-  
+    float: right;
+    text-align: left;
+    
+    background-color: #a0eaf7;
     
 }
 #mediaContainer {
     display: block;
-    margin: 0 auto;
     width: 30%;
-    height: 600px;
-    color: black;
+    height: 90%;
+    
+    margin: 2.5%;
+    
     bottom: 50px;
-    margin-bottom: 15px;
     border-style: none;
     border-radius: 10px;
     float: left;
@@ -634,26 +641,26 @@ input[type=email] {
 .media{
     height: 50%;
     
-    
+    padding: 5px;
 }
-#mediaimage{
-      height: 100%;
-    width: 90%;
-    padding-bottom: 10px;
-    margin-top: 10%;
+#mediaImage{
+    height: 50%;
+    
+    padding: 5px;
+    
+    background-color: #a0eaf7;
 }
 #mediaContainer video{
-    height: 100%;
-    width: 90%;
-    padding-bottom: 10px;
-    margin-top: 10%;
+    height: auto;
+    width: 100%;
+    
+    max-height: 90%;
 }
 #mediaContainer img{
- height: 100%;
-    width: 90%;
-    padding-bottom: 10px;
-  
+    height: 100%;
+    width: auto;
     
+    max-width: 100%;
 }
 
 /* Add Zoom Animation */
