--- a/style/viewer.css
+++ b/style/viewer.css
@@ -280,7 +280,7 @@
     margin-right: auto;
     
 
-    height: 70%;
+    height: 50%;
     width: 70%;
 }
 
@@ -314,14 +314,16 @@
 
     position: relative;
     top: -50px;
-    height: 23%;
+    height: 43%;
     background-color: #0098ba;
     padding: 15px;
     padding-left: 30px;
     padding-right: 30px;
-
+    line-height: 40px;
+    
+    
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
+    font-size: 27px;
     color: white;
 }
 
@@ -365,6 +367,7 @@
     border-color: #004e74;
     border-style: solid;
     border-radius: 15px;
+
     
     transition: border-color .6s;
 }
