--- a/style/viewer.css
+++ b/style/viewer.css
@@ -88,8 +88,6 @@
 
 #viewerBar #optionBtns
 {
-    width: calc(63px * 3);
-
     display: inline-block;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -100,10 +98,21 @@
     top: -100px;
 }
 
+#viewerBar #optionBtns div
+{
+    display: inline-block;
+    vertical-align: top;
+    float: right;
+    margin-left: 2.5px;
+    margin-left: 2.5px;
+}
+
 #viewerBar #optionBtns button
 {
     height: 60px;
     width: 60px;
+    
+    display: inline-block;
 
     padding: 5px;
 
@@ -117,6 +126,24 @@
     height: calc(80% - 5px);
     width: calc(80% - 5px);
     padding: 5px;
+}
+
+#viewerBar #optionBtns select
+{
+    position: relative;
+    top: -5px;
+    z-index: 1;
+    
+    display: none;
+    width: 100px;
+    height: 25px;
+    
+    font-size: 18px;
+    
+    border: none;
+    
+    background-color: #004e74;
+    color: white;
 }
 
 /* viewer forward/backward buttons */
