--- a/style/viewer.css
+++ b/style/viewer.css
@@ -15,7 +15,7 @@
 #viewerBar {
     background-color: #0098ba;
     width: 100%;
-    height: 100px;
+    height: 70px;
 }
 
 #viewerBar #index {
@@ -25,7 +25,7 @@
     text-align: center;
     height: 100%;
     width: 100%;
-    padding: 20px;
+    padding: 10px;
 }
 
 #viewerBar #index #holder {
@@ -41,9 +41,9 @@
 #viewerBar span {
     color: #004e74;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 50px;
+    font-size: 45px;
     font-weight: bold;
-    padding: 25px;
+    padding: 0 25px;
 }
 
 #viewerBar span#current {
@@ -51,6 +51,10 @@
 }
 
 #viewerBar span#slash {
+    
+    padding: 0;
+    
+    /*
     padding: 0px;
     display: inline-block;
     position: relative;
@@ -58,14 +62,12 @@
     height: 50px;
     width: 5px;
 
-    top: 5px;
-
     border: 1px;
     border-radius: 30px;
     border-color: #004e74;
     background-color: #004e74;
 
-    transform: rotate(25deg);
+    transform: rotate(25deg);*/
 
 }
 
@@ -89,13 +91,13 @@
 #viewerBar #optionBtns
 {
     display: inline-block;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 2.5px;
+    padding-bottom: 2.5px;
     margin-right: 50px;
     float: right;
 
     position: relative;
-    top: -100px;
+    top: -70px;
 }
 
 #viewerBar #optionBtns div
