--- a/style/viewer.css
+++ b/style/viewer.css
@@ -292,14 +292,14 @@
     position: relative;
     top: -50px;
 
-    margin: 2.5%;
-
+    margin-top: 10px;
+    margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
     
 
-    height: 50%;
-    width: 70%;
+    height: calc(50% - 20px);
+    width: 100%;
     
     transition: height .6s;
 }
@@ -334,8 +334,8 @@
 
     position: relative;
     vertical-align: bottom;
-    top: calc(-50px - 1.25%);
-    height: calc(45% - 50px);
+    top: calc(-50px);
+    height: calc(50% - 50px);
     background-color: #0098ba;
     padding: 5px;
     padding-left: 30px;
@@ -364,10 +364,8 @@
     height: 50px;
     width: 100%;
     
-    margin-top: 1.25%;
-    
     position: relative;
-    top: calc(-50px - 1.25%);
+    top: calc(-50px);
     
     opacity: .9;
 }
