--- a/style/viewer.css
+++ b/style/viewer.css
@@ -99,24 +99,15 @@
     
     display: inline-block;
 
-    padding: 5px;
-
     border: 1px;
     border-radius: 50%;
     border-color: #004e74;
     background-color: #004e74;
 }
 
-#viewerBar #optionBtns button:hover img
-{
-    height: calc(85% - 5px);
-    width: calc(85% - 5px); 
-}
-
 #viewerBar #optionBtns button img {
-    height: calc(80% - 5px);
-    width: calc(80% - 5px);
-    padding: 5px;
+    height: calc(100%);
+    width: calc(100%);
 }
 
 #viewerBar #optionBtns select
@@ -391,8 +382,7 @@
 .content #storyToggle button img {
     height: 40px;
     width: 40px;
-    opacity: 1.3;
-    padding: 5px;
+    padding: 1px;
 
 }
 
