--- a/style/Filter.css
+++ b/style/Filter.css
@@ -35,6 +35,7 @@
     border-color: #004e74;
     
     font-size: 110%;
+    text-align: center;
     
     background-color: #004e74;
     color: white;
@@ -50,12 +51,20 @@
 .filter button img
 {
     height: 20px;
-    width 20px;
+    width: 30px;
     padding-right: 5px;
     
     position: relative;
-    left: -10px;
+    float: left;
     vertical-align: middle;
+}
+
+.filter button img.dropdownIcon
+{
+    position: relative;
+    float: right;
+    padding-left: 5px;
+    padding-right: 0px;
 }
 
 .filter button:hover
