--- a/style/LoginPage.css
+++ b/style/LoginPage.css
@@ -1,10 +1,14 @@
-  body {
+
+
+/* Full-width input fields */
+body{
+      background-color: #0098ba;
+}
+#loginHolder {
         font-family: Arial, Helvetica, sans-serif;
         text-align: center;
         background-color: #0098ba;
         color: #ffffff}
-
-/* Full-width input fields */
 input[type=password], input[type=usr], input[type=email] {
   width: 100%;
   padding: 12px 20px;
